--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/11 (1).jpg">
+                            <img class="movie-list-item-img" src="img/photo1.avif">
                             <span class="movie-list-item-title">Her</span>
                             <p class="movie-list-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             </p>
